Move token operations from operations bucket to storage engine
Move token operations from operations bucket to storage engine

#3102